tests/facebook_fbt_some/facebook_fbt_some.exp
Error: main.js:4
  4: (<fbt />: string); // Error (the libdef in this test marks fbt as number)
      ^^^^^^^ Fbt. This type is incompatible with
  4: (<fbt />: string); // Error (the libdef in this test marks fbt as number)
               ^^^^^^ string


Found 1 error
